css/scs.css
/* ... */
.nav li {
  display: block;
  padding: 0;
  margin: 0 0 1rem 0;
}

.nav a {
  text-transform: uppercase;
  font-size: 1.6rem;
}

@media print {
  .subnav { display: none; }
}

/* Larger than mobile */
@media (min-width: 550px) {

  .nav li {
    display: inline-block;
    margin: 0;
  }

  .nav li + li {
    padding-left: 2rem;
  }

}


/* Footer & license
–––––––––––––––––––––––––––––––––––––––––––––––––– */

footer {
  margin-top: 1rem;
  border-top: 2px solid #eee;
  padding-top: 2rem;
  color: #BBB;
  font-size: 1.5rem;
  text-transform: uppercase;
}

.license {
  margin-bottom: 10px;
}

.license-text a {
  color: #BBB;
  text-decoration: none;
}

.license-text a:hover {
  color: white;
}

.license-icons a {
  padding: 0;
  display: block;
  text-decoration: none;
  opacity: 0.25;
}

.license-icons a:hover {
  opacity: 1;
  background-color: transparent;
}


/* Media Queries
–––––––––––––––––––––––––––––––––––––––––––––––––– */
/*
Note: The best way to structure the use of media queries is to create the queries
near the relevant code. For example, if you wanted to change the styles for buttons
on small devices, paste the mobile query code up in the buttons section and style it
there.
*/

/* Larger than mobile */
@media (min-width: 400px) {}

/* Larger than phablet (also point when grid becomes active) */
@media (min-width: 550px) {}

/* Larger than tablet */
@media (min-width: 750px) {}

/* Larger than desktop */
@media (min-width: 1000px) {}

/* Larger than Desktop HD */
@media (min-width: 1200px) {}

